# sbim_browse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: clinical_trials.py  extract_info.py  main.py
tools/: clinical_trials.py
