[project]
name = "sbim-browse"
version = "0.1.0"
description = "Web information extraction Workflow for medical websites such as ClinicalTrialsGov or PubMed"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "datetime>=5.5",
    "logging>=0.4.9.6",
    "openai-agents>=0.2.10",
    "requests>=2.32.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    ]

[tool.ruff]
line-length = 88
