[project]
name = "sbim-browse"
version = "0.1.0"
description = "Web information extraction Workflow for medical websites such as ClinicalTrialsGov or PubMed"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "datetime>=5.5",
    "jmespath>=1.0.1",
    "logging>=0.4.9.6",
    "openai-agents>=0.2.10",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    ]

[tool.ruff]
line-length = 88
